PCS BAckup 26Dec2023/Backup-Source/objects/Phoenix_Bid_VIP_Rebate__c.object
<CustomObject>
    <fields>
        <fullName>Net_Contract__c</fullName>
        <label>Net/Gross</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Net</fullName>
                </value>
                <value>
                    <fullName>Gross</fullName>
                </value>
                <value>
                    <fullName>Contract</fullName>
                    <isActive>false</isActive>
                    <label>Contract</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Payment_Frequency__c</fullName>
        <label>Payment Frequency</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Bid__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bid</label>
        <referenceTo>Phoenix_Bid__c</referenceTo>
        <relationshipName>VIP_Rebates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phoenix_Business_Approval_Comments__c</fullName>
        <label>Business Head Approval Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Phoenix_Business_Approval__c</fullName>
        <label>Business Head Approval</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Not Approved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phoenix_Contracts_Approval_Comments__c</fullName>
        <label>Contracts Approval Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Phoenix_Contracts_Approval__c</fullName>
        <label>Contracts Approval</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sent to Customer</fullName>
                </value>
                <value>
                    <fullName>Line Error- Not Sent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phoenix_Customer_Approval_Comments__c</fullName>
        <label>Customer Approval Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Phoenix_Customer_Approval__c</fullName>
        <label>Customer Approval</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Customer Accepted</fullName>
                </value>
                <value>
                    <fullName>Customer Not Accepted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phoenix_Customer__c</fullName>
        <label>Customer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>VIP Rebates</relationshipLabel>
        <relationshipName>Bid_VIP_Rebates</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Phoenix_Discount_Rebate__c</fullName>
        <label>Discount Rebate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Phoenix_Dollar_Volume_From__c</fullName>
        <label>Dollar Value From</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Dollar_Volume_To__c</fullName>
        <label>Dollar Value To</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_End_Date__c</fullName>
        <label>End Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Phoenix_Exclusion_details__c</fullName>
        <label>Exclusion details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Phoenix_Exclusions__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Exclusions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Phoenix_Finance_Approval_Comments__c</fullName>
        <label>Finance Approval Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Phoenix_Finance_Approval__c</fullName>
        <label>Finance Approval</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Not Approved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phoenix_Rebate_Identifier__c</fullName>
        <label>Rebate Identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Remarks__c</fullName>
        <label>Remarks</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Start_Date__c</fullName>
        <label>Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Phoenix_Status__c</fullName>
        <label>Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Current</fullName>
                </value>
                <value>
                    <fullName>Old</fullName>
                </value>
                <value>
                    <fullName>Proposed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phoenix_Tier__c</fullName>
        <label>Tier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Type__c</fullName>
        <label>Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Currency</fullName>
                </value>
                <value>
                    <fullName>Quantity</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phoenix_Unit_Volume_From__c</fullName>
        <label>Unit Volume From</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phoenix_Unit_Volume_To__c</fullName>
        <label>Unit Volume To</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phoenix_Vistex_Update_Comments__c</fullName>
        <label>Vistex Update Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Phoenix_Vistex_Update__c</fullName>
        <label>Vistex Update</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Processed</fullName>
                </value>
                <value>
                    <fullName>Not_Processed</fullName>
                    <label>Not Processed</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rx_SRx_OTC__c</fullName>
        <label>Rx/SRx/OTC</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Rx</fullName>
                </value>
                <value>
                    <fullName>SRx</fullName>
                </value>
                <value>
                    <fullName>OTC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Vision_Contract_Status__c</fullName>
        <formula>IF(ISBLANK( Phoenix_End_Date__c ),&quot;&quot;,IF( Phoenix_End_Date__c &lt; TODAY(),&quot;Inactive&quot;, &quot;Active&quot; ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Rebate_Contract__c</fullName>
        <formula>IF(AND( NOT( ISBLANK(Vistex_Agreement__c) ), NOT(ISBLANK(Phoenix_Start_Date__c) ),NOT(ISBLANK(Phoenix_End_Date__c) )), Vistex_Agreement__c+&apos;_&apos;+ TEXT(MONTH(Phoenix_Start_Date__c))+&apos;/&apos;+TEXT(DAY(Phoenix_Start_Date__c))+&apos;/&apos;+TEXT(YEAR(Phoenix_Start_Date__c))+&apos;_&apos;+ TEXT(MONTH(Phoenix_End_Date__c))+&apos;/&apos;+TEXT(DAY(Phoenix_End_Date__c))+&apos;/&apos;+TEXT(YEAR(Phoenix_End_Date__c)), &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rebate Contract</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vistex_Agreement_Value__c</fullName>
        <formula>Phoenix_Bid__r.Phoenix_Vistex_Agreement_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Vistex Agreement Value</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vistex_Agreement__c</fullName>
        <label>Vistex Agreement</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <label>VIP Rebate</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Vistex_Agreement__c</columns>
        <columns>Net_Contract__c</columns>
        <columns>Phoenix_Customer__c</columns>
        <columns>Phoenix_Bid__c</columns>
        <columns>Phoenix_Status__c</columns>
        <columns>Phoenix_Type__c</columns>
        <columns>Phoenix_Start_Date__c</columns>
        <columns>Phoenix_End_Date__c</columns>
        <columns>Payment_Frequency__c</columns>
        <columns>Vision_Contract_Status__c</columns>
        <columns>Rx_SRx_OTC__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>VIP Rebate Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>VIP Rebates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Date_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>Phoenix_Start_Date__c  &gt;  Phoenix_End_Date__c</errorConditionFormula>
        <errorDisplayField>Phoenix_End_Date__c</errorDisplayField>
        <errorMessage>End Date should be greater than Start Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Exclusion_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>AND(Phoenix_Exclusions__c  = TRUE, Phoenix_Exclusion_details__c =&apos;&apos;)</errorConditionFormula>
        <errorDisplayField>Phoenix_Exclusion_details__c</errorDisplayField>
        <errorMessage>Please Enter Exclusion Details</errorMessage>
    </validationRules>
</CustomObject>